--- a/OfficeBoardApi.Domain/OfficeBoardApi.Domain.csproj
+++ b/OfficeBoardApi.Domain/OfficeBoardApi.Domain.csproj
@@ -3,7 +3,15 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="DataTransferObject\" />
+      <None Remove="DataTransferObject\Setting\" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="DataTransferObject\" />
+      <Folder Include="DataTransferObject\Setting\" />
+    </ItemGroup>
 </Project>
